Configure CSRF protection for Vercel environment and update PostgreSQL database connection settings; add WSGI entry point

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "api/**/*.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -13,6 +17,8 @@
     }
   ],
   "env": {
-    "PYTHONUNBUFFERED": "1"
+    "PYTHONUNBUFFERED": "1",
+    "VERCEL_ENV": "production",
+    "WTF_CSRF_CHECK_DEFAULT": "false"
   }
 } 
